--- a/html/html/edit_server.html
+++ b/html/html/edit_server.html
@@ -1,9 +1,9 @@
-{{ define "add_server" }}
+{{ define "edit_server" }}
 {{ template "header" . }}
 
-<h1>Add Server</h1>
+<h1>Edit Server</h1>
 
-<form action="/dashboard/servers/add" method="post">
+<form action="/dashboard/servers/edit/{{ .id }}" method="post">
 
     {{ template "csrf" . }}
 
@@ -25,8 +25,8 @@
     <label>
         Hidden
         <select name="hidden" aria-label="Hidden" required value="{{ .post.hidden }}">
-            <option value="yes">Yes</option>
-            <option value="no">No</option>
+            <option {{ if .post.hidden }}selected{{ end }} value="yes">Yes</option>
+            <option {{ if not .post.hidden }}selected{{ end }} value="no">No</option>
         </select>
     </label>
 
