--- a/html/html/edit_server.html
+++ b/html/html/edit_server.html
@@ -24,7 +24,7 @@
 
     <label>
         Secret
-        <input type="text" placeholder="Secret" required name="Secret" value="{{ .post.secret }}">
+        <input type="text" placeholder="Secret" required name="secret" value="{{ .post.secret }}">
     </label>
 
     <label>
