--- a/html/html/index.html
+++ b/html/html/index.html
@@ -2,26 +2,26 @@
 {{ template "header" . }}
 
 
-<div class="row mb-3">
-    <div class="col-6 col-lg-3">
+<div class="row">
+    <div class="col-6 col-lg-3 mb-3">
         <article class="h-100">
             <header>Total servers</header>
             <span id="stat-total" aria-busy="true"></span>
         </article>
     </div>
-    <div class="col-6 col-lg-3">
+    <div class="col-6 col-lg-3 mb-3">
         <article class="h-100">
             <header>Online servers</header>
             <span id="stat-online" aria-busy="true"></span>
         </article>
     </div>
-    <div class="col-6 col-lg-3">
+    <div class="col-6 col-lg-3 mb-3">
         <article class="h-100">
             <header>Offline servers</header>
             <span id="stat-offline" aria-busy="true"></span>
         </article>
     </div>
-    <div class="col-6 col-lg-3">
+    <div class="col-6 col-lg-3 mb-3">
         <article class="h-100">
             <header>Network</header>
             <div id="stat-network" aria-busy="true"></div>
