--- a/html/html/header.html
+++ b/html/html/header.html
@@ -26,7 +26,7 @@
     <main class="container">
         <nav>
             <ul>
-                <li><strong><a href="/">PPR</a></strong></li>
+                <li><strong><a href="/">Status</a></strong></li>
             </ul>
             <ul>
                 {{ if .login }}
