--- a/html/html/dashboard_header.html
+++ b/html/html/dashboard_header.html
@@ -6,7 +6,7 @@
         <li><a href="/dashboard/servers">Servers</a></li>
         <li><a href="/dashboard/groups">Groups</a></li>
         <li><a href="/dashboard/services">Services</a></li>
-        <li><a href="/dashboard/users">Users</a></li>
+        <li><a href="/dashboard/user">User</a></li>
         <li><a href="/dashboard/settings">Settings</a></li>
     </ul>
 </nav>
