--- a/html/html/header.html
+++ b/html/html/header.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <main class="container">
+    <main class="container" style="min-height: 90vh;">
         <nav>
             <ul>
                 <li><strong><a href="/">{{ .site_name }}</a></strong></li>
